--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,13 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!DOCTYPE html>
+
+<html class="no-js" lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Photography & Retouching — Callihan Creations</title>
-  <meta name="description" content="Photography and retouching portfolio by Caleb Callihan.">
-  <link rel="stylesheet" href="/styles/base.css">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Portfolio — Callihan Creations</title>
+<meta content="Photography and retouching portfolio by Caleb Callihan." name="description"/>
+<link href="/styles/base.css" rel="stylesheet"/>
+<style>
     /* simple masonry that works with your current CSS */
     .masonry{columns:1;column-gap:var(--space-4)}
     @media(min-width:700px){.masonry{columns:2}}
@@ -18,111 +19,127 @@
   </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <a class="site-logo" href="/" aria-label="Home">
-        <svg width="28" height="28" viewBox="0 0 28 28" aria-hidden="true"><circle cx="14" cy="14" r="12"/></svg>
-        <span>Callihan Creations</span>
-      </a>
-      <nav class="site-nav">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/cabig.html">Cabig Games</a></li>
-          <li><a aria-current="page" href="/portfolio.html">Portfolio</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main id="main">
-    <section class="hero">
-      <div class="container">
-        <div class="kicker">Photography</div>
-        <h1>Portfolio</h1>
-        <p class="lead">A collection of my work! My favorite medium is photography; and here you can find a great variety of my work from both professional and personal settings.</p>
-      </div>
-    </section>
-    
-    <section class="section">
-      <div class="container">
-        <h2>Professional Portrait Retouching</h2>
-        <div class="masonry">
-        <figure>
-          <img src="/media/photos/retouch_01_portrait_sun.jpg" alt="Retouching — portrait in direct sun (before/after)." loading="lazy">
-          <figcaption>Retouching — portrait in direct sun (before/after).</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/retouch_02_portrait_muted.jpg" alt="Retouching — portrait tonal cleanup (before/after)." loading="lazy">
-          <figcaption>Retouching — portrait tonal cleanup (before/after).</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/retouch_03_airfield.jpg" alt="Retouching — airfield portrait (before/after)." loading="lazy">
-          <figcaption>Retouching — airfield portrait (before/after).</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/retouch_04_white_dress.jpg" alt="Retouching — outdoor portrait in white dress (before/after)." loading="lazy">
-          <figcaption>Retouching — outdoor portrait in white dress (before/after).</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/retouch_05_family.jpg" alt="Retouching — family group (before/after)." loading="lazy">
-          <figcaption>Retouching — family group (before/after).</figcaption>
-        </figure>
-        </div>
-      </div>
-    </section>
+<header class="site-header">
+<div class="container">
+<a aria-label="Home" class="site-logo" href="/">
+<svg aria-hidden="true" height="28" viewbox="0 0 28 28" width="28"><circle cx="14" cy="14" r="12"></circle></svg>
+<span>Callihan Creations</span>
+</a><button aria-controls="primary-nav" aria-expanded="false" class="nav-toggle" title="Toggle navigation" type="button"><svg aria-hidden="true" class="icon" height="22" viewBox="0 0 24 24" width="22"><path d="M7 10l5 5 5-5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path></svg></button>
+<nav class="site-nav" id="primary-nav">
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/cabig.html">Cabig Games</a></li>
+<li><a aria-current="page" href="/portfolio.html">Portfolio</a></li>
+</ul>
+</nav>
+</div>
+</header>
+<main id="main">
+<section class="hero">
+<div class="container">
+<div class="kicker">Portfolio</div>
+<h1>Portfolio</h1>
+<p class="lead">A collection of my work! My favorite medium is photography; and here you can find a great variety of my work from both professional and personal settings.</p>
+</div>
 </section>
-  
-    <section class="section">
-      <div class="container">
-        <h2>Personal work</h2>
-        <div class="grid-gallery" style="margin-top:var(--space-4)">
-        <figure>
-          <img src="/media/photos/personal/door_bw.jpg" alt="Industrial door — black & white study." loading="lazy">
-          <figcaption>Industrial door — black & white study.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/plaza_night.jpg" alt="Plaza at night — string lights and mural." loading="lazy">
-          <figcaption>Plaza at night — string lights and mural.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/aspen_swamp.jpg" alt="Aspen grove — flooded basin." loading="lazy">
-          <figcaption>Aspen grove — flooded understory.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/slot_falls.jpg" alt="Hidden Falls — afternoon light." loading="lazy">
-          <figcaption>Waterfall in slot — afternoon light.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/pigeon_on_post.jpg" alt="Pigeon on post — golden hour." loading="lazy">
-          <figcaption>Pigeon on post — golden hour.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/poppies_close.jpg" alt="Poppies — macro detail." loading="lazy">
-          <figcaption>Poppies — macro detail.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/snowies_pano.jpg" alt="Snowy Range — panorama at the lake." loading="lazy">
-          <figcaption>Snowy Range — panorama at the lake.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/marmot.jpg" alt="Marmot in limestone — close up." loading="lazy">
-          <figcaption>Marmot in talus — close up.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/eisenhower_building.jpg" alt="Eisenhower Executive Office Building — holiday garland." loading="lazy">
-          <figcaption>Eisenhower Executive Office Building — holiday garland.</figcaption>
-        </figure>
-        <figure>
-          <img src="/media/photos/personal/cupcakes.jpg" alt="Cupcakes — café window light." loading="lazy">
-          <figcaption>Cupcakes — café window light.</figcaption>
-        </figure>
-        </div>
-      </div>
-    </section>
+<section class="section">
+<div class="container">
+<h2>Professional Portrait Retouching</h2>
+<div class="masonry">
+<figure>
+<img alt="Retouching — portrait in direct sun (before/after)." loading="lazy" src="/media/photos/retouch_01_portrait_sun.jpg"/>
+<figcaption>Retouching — portrait in direct sun (before/after).</figcaption>
+</figure>
+<figure>
+<img alt="Retouching — portrait tonal cleanup (before/after)." loading="lazy" src="/media/photos/retouch_02_portrait_muted.jpg"/>
+<figcaption>Retouching — portrait tonal cleanup (before/after).</figcaption>
+</figure>
+<figure>
+<img alt="Retouching — airfield portrait (before/after)." loading="lazy" src="/media/photos/retouch_03_airfield.jpg"/>
+<figcaption>Retouching — airfield portrait (before/after).</figcaption>
+</figure>
+<figure>
+<img alt="Retouching — outdoor portrait in white dress (before/after)." loading="lazy" src="/media/photos/retouch_04_white_dress.jpg"/>
+<figcaption>Retouching — outdoor portrait in white dress (before/after).</figcaption>
+</figure>
+<figure>
+<img alt="Retouching — family group (before/after)." loading="lazy" src="/media/photos/retouch_05_family.jpg"/>
+<figcaption>Retouching — family group (before/after).</figcaption>
+</figure>
+</div>
+</div>
+</section>
 
+<section class="section">
+<div class="container">
+<h2>Personal work</h2>
+<div class="grid-gallery" style="margin-top:var(--space-4)">
+<figure>
+<img alt="Industrial door — black &amp; white study." loading="lazy" src="/media/photos/personal/door_bw.jpg"/>
+<figcaption>Industrial door — black &amp; white study.</figcaption>
+</figure>
+<figure>
+<img alt="Plaza at night — string lights and mural." loading="lazy" src="/media/photos/personal/plaza_night.jpg"/>
+<figcaption>Plaza at night — string lights and mural.</figcaption>
+</figure>
+<figure>
+<img alt="Aspen grove — flooded basin." loading="lazy" src="/media/photos/personal/aspen_swamp.jpg"/>
+<figcaption>Aspen grove — flooded understory.</figcaption>
+</figure>
+<figure>
+<img alt="Hidden Falls — afternoon light." loading="lazy" src="/media/photos/personal/slot_falls.jpg"/>
+<figcaption>Waterfall in slot — afternoon light.</figcaption>
+</figure>
+<figure>
+<img alt="Pigeon on post — golden hour." loading="lazy" src="/media/photos/personal/pigeon_on_post.jpg"/>
+<figcaption>Pigeon on post — golden hour.</figcaption>
+</figure>
+<figure>
+<img alt="Poppies — macro detail." loading="lazy" src="/media/photos/personal/poppies_close.jpg"/>
+<figcaption>Poppies — macro detail.</figcaption>
+</figure>
+<figure>
+<img alt="Snowy Range — panorama at the lake." loading="lazy" src="/media/photos/personal/snowies_pano.jpg"/>
+<figcaption>Snowy Range — panorama at the lake.</figcaption>
+</figure>
+<figure>
+<img alt="Marmot in limestone — close up." loading="lazy" src="/media/photos/personal/marmot.jpg"/>
+<figcaption>Marmot in talus — close up.</figcaption>
+</figure>
+<figure>
+<img alt="Eisenhower Executive Office Building — holiday garland." loading="lazy" src="/media/photos/personal/eisenhower_building.jpg"/>
+<figcaption>Eisenhower Executive Office Building — holiday garland.</figcaption>
+</figure>
+<figure>
+<img alt="Cupcakes — café window light." loading="lazy" src="/media/photos/personal/cupcakes.jpg"/>
+<figcaption>Cupcakes — café window light.</figcaption>
+</figure>
+</div>
+</div>
+</section>
 </main>
+<footer class="site-footer"><div class="container small"> <span id="year"></span> Caleb Callihan</div></footer>
+<script src="/scripts/main.js"></script>
+<script>
+(function(){
+  var header = document.querySelector('.site-header');
+  var btn = document.querySelector('.nav-toggle');
+  var nav = document.getElementById('primary-nav');
+  if (!header || !btn || !nav) return;
 
-  <footer class="site-footer"><div class="container small"> <span id="year"></span> Caleb Callihan</div></footer>
-  <script src="/scripts/main.js"></script>
-</body>
+  function setOpen(open){
+    header.setAttribute('data-nav-open', open ? 'true' : 'false');
+    btn.setAttribute('aria-expanded', open ? 'true' : 'false');
+  }
+  setOpen(false);
+
+  btn.addEventListener('click', function(){
+    var isOpen = header.getAttribute('data-nav-open') === 'true';
+    setOpen(!isOpen);
+  });
+
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') setOpen(false);
+  });
+})();</script></body>
 </html>
