--- a/cabig.html
+++ b/cabig.html
@@ -22,12 +22,12 @@
 <a class="site-logo" href="/index.html">
 <svg aria-hidden="true" height="26" viewbox="0 0 24 24" width="26"><circle cx="12" cy="12" r="10"></circle></svg>
 <span>Callihan Creations</span>
-</a><button aria-controls="primary-nav" aria-expanded="false" class="nav-toggle" title="Toggle navigation" type="button"><svg aria-hidden="true" class="icon" height="22" viewbox="0 0 24 24" width="22"><path d="M7 10l5 5 5-5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path></svg></button>
-<nav class="site-nav" id="primary-nav">
+</a>
+<nav class="site-nav">
 <ul>
 <li><a href="/index.html">Home</a></li>
 <li><a aria-current="page" href="/cabig.html">Cabig Games</a></li>
-<li><a href="/portfolio.html">Portfolio</a></li>
+<li><a href="/portfolio.html">Photography</a></li>
 </ul>
 </nav>
 </div>
@@ -49,7 +49,7 @@
 <a class="btn" href="https://play.google.com/store/apps/details?id=com.cabiggames.squarewave" rel="noopener" target="_blank">View on Google Play</a>
 </div>
 </div>
-</div>
+<div class="hero-aside"><img alt="Squarewave gameplay collage" src="/media/squarewave/icon.webp"/></div></div>
 </section>
 <section class="section">
 <div class="container">
@@ -118,28 +118,5 @@
 <p>© 2025 Cabig Games — An independent project by Caleb Callihan.</p>
 </div>
 </footer>
-<script>
-(function(){
-  var header = document.querySelector('.site-header');
-  var btn = document.querySelector('.nav-toggle');
-  var nav = document.getElementById('primary-nav');
-  if (!header || !btn || !nav) return;
-
-  function setOpen(open){
-    header.setAttribute('data-nav-open', open ? 'true' : 'false');
-    btn.setAttribute('aria-expanded', open ? 'true' : 'false');
-  }
-  setOpen(false);
-
-  btn.addEventListener('click', function(){
-    var isOpen = header.getAttribute('data-nav-open') === 'true';
-    setOpen(!isOpen);
-  });
-
-  // Close on escape
-  document.addEventListener('keydown', function(e){
-    if (e.key === 'Escape') setOpen(false);
-  });
-})();
-</script></body>
+</body>
 </html>
