--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport">
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Callihan Creations</title>
 <link href="/styles/base.css" rel="stylesheet"/>
 <style>
@@ -77,15 +77,15 @@
     .hidden-hp { position: absolute !important; left: -10000px; top: auto; width: 1px; height: 1px; overflow: hidden; }
 
   </style>
-</meta></head>
+</head>
 <body>
 <header class="site-header">
 <div class="container">
 <a class="site-logo" href="/index.html">
 <svg aria-hidden="true" height="26" viewbox="0 0 24 24" width="26"><circle cx="12" cy="12" r="10"></circle></svg>
 <span>Callihan Creations</span>
-</a><button aria-controls="primary-nav" aria-expanded="false" class="nav-toggle" title="Toggle navigation" type="button"><svg aria-hidden="true" class="icon" height="22" viewBox="0 0 24 24" width="22"><path d="M7 10l5 5 5-5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path></svg></button>
-<nav class="site-nav" id="primary-nav">
+</a><button aria-controls="primary-nav" aria-expanded="false" class="nav-toggle" title="Toggle navigation" type="button"><svg aria-hidden="true" class="icon" height="22" viewbox="0 0 24 24" width="22"><path d="M7 10l5 5 5-5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path></svg></button>
+<nav class="site-nav" hidden="" id="primary-nav">
 <ul>
 <li><a aria-current="page" href="/index.html">Home</a></li>
 <li><a href="/cabig.html">Cabig Games</a></li>
@@ -233,5 +233,40 @@
   document.addEventListener('keydown', function(e){
     if (e.key === 'Escape') setOpen(false);
   });
+})();</script><script>
+(function(){
+  function navToggleHandler(){
+    var header = document.querySelector('.site-header');
+    var btn = document.querySelector('.nav-toggle');
+    var nav = document.getElementById('primary-nav');
+    if(!header || !btn || !nav) return;
+
+    // Set initial hidden state for small screens
+    var mq = window.matchMedia('(max-width: 720px)');
+    function applyInitial(){
+      if(mq.matches){ nav.hidden = true; btn.setAttribute('aria-expanded','false'); }
+      else { nav.hidden = false; btn.setAttribute('aria-expanded','false'); }
+    }
+    applyInitial();
+    mq.addEventListener('change', applyInitial);
+
+    btn.addEventListener('click', function(){
+      var expanded = btn.getAttribute('aria-expanded') === 'true';
+      btn.setAttribute('aria-expanded', (!expanded).toString());
+      nav.hidden = expanded;
+    });
+
+    // Close after clicking a link (mobile)
+    nav.querySelectorAll('a').forEach(function(a){
+      a.addEventListener('click', function(){
+        if(window.matchMedia('(max-width: 720px)').matches){
+          nav.hidden = true;
+          btn.setAttribute('aria-expanded','false');
+        }
+      });
+    });
+  }
+  if(document.readyState === 'loading'){ document.addEventListener('DOMContentLoaded', navToggleHandler); }
+  else { navToggleHandler(); }
 })();</script></body>
 </html>
